<resources>
    <string name="app_name">CreateAccount</string>
    <string name="welcome">Welcome back</string>
    <string name="sign_in_text">sign in to access your account</string>
    <string name="password">Password</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="remember_me">Remember Me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="button">Next ></string>
    <string name="register_now">Register now</string>
    <string name="new_member">New Member?</string>
    <string name="get_started">Get Started</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="valid_email">Valid email</string>
    <string name="full_name">Full name</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log in</string>
    <string name="phone_number">Phone number</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menuSettings">Menu settings</string>
</resources>